--- a/front/auth/login.html
+++ b/front/auth/login.html
@@ -20,21 +20,21 @@
             <div class="card-body">
               <form onsubmit="login(event)">
                 <i
-                  class="fa-solid fa-user fa-lg shadow-lg"
+                  class="fa-solid fa-envelope fa-lg shadow-lg"
                   style="color: #7c7e80"
                 ></i>
                 <label for="user" class="form-label fw-semibold ps-1">
-                  Nombre de usuario:</label
+                  Email:</label
                 >
                 <div class="mb-3 form-floating">
                   <input
                     required
-                    type="user"
+                    type="email"
                     class="form-control"
                     id="user"
-                    placeholder="Ingrese su usuario"
+                    placeholder="Ingrese su email"
                   />
-                  <label for="user">Usuario</label>
+                  <label for="user">Email</label>
                 </div>
                 <i class="fa-solid fa-lock fa-lg" style="color: #7c7e80"></i>
                 <label for="password" class="form-label fw-semibold ps-1">
